--- a/login/fb_standard/index.html
+++ b/login/fb_standard/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript">
       <!--
       if (screen.width <= 699) {
-        document.location = "Mobile_1.html";
+        document.location = "mobile.html";
       }
     </script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
